@@ -16,16 +16,20 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 public class KotlinUtil {
     public static String getStringLiteral(PsiElement element) {
-        if (element instanceof KtLiteralStringTemplateEntry stringTemplateEntry) {
+        if (element instanceof KtLiteralStringTemplateEntry) {
+            var stringTemplateEntry = (KtLiteralStringTemplateEntry) element;
             return stringTemplateEntry.getText();
         }
-        if (element instanceof LeafPsiElement && element.getParent() instanceof KtLiteralStringTemplateEntry stringTemplateEntry) {
+        if (element instanceof LeafPsiElement && element.getParent() instanceof KtLiteralStringTemplateEntry) {
+            var stringTemplateEntry = (KtLiteralStringTemplateEntry) element.getParent();
             return stringTemplateEntry.getText();
         }
-        if (element instanceof KtStringTemplateExpression expression) {
+        if (element instanceof KtStringTemplateExpression) {
+            var expression = (KtStringTemplateExpression) element;
             var text = expression.getText();
             return text.substring(1, text.length() - 1);
         }
@@ -51,6 +55,6 @@ public class KotlinUtil {
                     });
                     return psiElements;
                 }).flatMap(Collection::stream)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
